chat visibility, animate header, fix scene size

--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -1,8 +1,13 @@
+*{
+    box-sizing: border-box;
+}
+
 input {
     outline: none;
 }
 
 .chat_container {
+    position: absolute;
     margin-top: 15px;
     width: 350px;
     text-align: center;
