--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -1,8 +1,26 @@
-header div {
-    text-align: right;
+header {
+    position: fixed;
+    width: 100%;
+    height: 120px;
+    top: -60px;
+    transition: top 0.25s linear;
 }
 
-header input {
+header:hover {
+    top: 0px;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
+}
+
+.header_div {
+    position: absolute;
+    right: 0;
+}
+
+#logout_button {
     font-size: 30px;
     background: none;
     border: 0;
@@ -16,6 +34,7 @@ header input {
     transition: 0.25s;
 }
 
-header input[id="logout_button"]:hover {
+#logout_button:hover {
     background: #3498db;
+    transition: 0.25s;
 }
